--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
   "bugs": {
     "url": "https://github.com/knuckleswtf/scribe-js/issues"
   },
-  "homepage": "https://github.com/knuckleswtf/scribe-js#readme"
+  "homepage": "https://github.com/knuckleswtf/scribe-js#readme",
+  "dependencies": {
+    "@types/node": "^14.0.5",
+    "typescript": "^3.9.3"
+  }
 }
