--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@knuckleswtf/scribe",
   "version": "1.0.0",
   "description": "Generate API documentation for humans from your Node.js codebase.",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/knuckleswtf/scribe-js#readme",
   "dependencies": {
     "@types/node": "^14.0.5",
+    "lodash.findlastindex": "^4.6.0",
     "typescript": "^3.9.3"
   }
 }
