--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@types/node": "^14.0.5",
     "cross-spawn": "^7.0.2",
     "faker": "^4.1.0",
+    "handlebars": "^4.7.6",
+    "handlebars-helpers": "^0.10.0",
     "lodash.findlastindex": "^4.6.0",
     "lodash.trim": "^4.5.1",
     "matcher": "^3.0.0",
