--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "handlebars-helpers": "^0.10.0",
     "lodash.findlastindex": "^4.6.0",
     "lodash.groupby": "^4.6.0",
+    "lodash.keyby": "^4.6.0",
     "lodash.trim": "^4.5.1",
     "matcher": "^3.0.0",
     "randexp": "^0.5.3",
