--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "faker": "^4.1.0",
     "handlebars": "^4.7.6",
     "handlebars-helpers": "^0.10.0",
+    "inquirer": "^7.3.3",
     "lodash.findlastindex": "^4.6.0",
     "lodash.groupby": "^4.6.0",
     "lodash.keyby": "^4.6.0",
