--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
   "homepage": "https://github.com/knuckleswtf/scribe-js#readme",
   "dependencies": {
     "@knuckleswtf/pastel": "^0.2.0",
-    "@types/node": "^14.0.5",
     "commander": "^5.1.0",
     "cross-spawn": "^7.0.2",
     "docblock-parser": "^1.0.0",
@@ -42,9 +41,13 @@
     "randexp": "^0.5.3",
     "require-in-the-middle": "^5.0.3",
     "slugify": "^1.4.0",
-    "typescript": "^3.9.3"
+    "striptags": "^3.1.1",
+    "typescript": "^3.9.3",
+    "uuid": "^8.3.0"
   },
   "devDependencies": {
+    "@types/node": "^14.0.5",
+    "@types/postman-collection": "^3.5.5",
     "express": "^4.17.1",
     "jest": "^26.1.0"
   }
