--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
     "outDir": "dist",
     "rootDir": "src",
     "declarationDir": "types",
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "lib": ["es2020"]
   },
   "exclude": [
     "node_modules",
