--- a/frameworks/express/package.json
+++ b/frameworks/express/package.json
@@ -34,5 +34,8 @@
     "@types/node": "^14.0.5",
     "express": "^4.17.1",
     "typescript": "^3.9.3"
+  },
+  "engines": {
+    "node": ">=12.4.0"
   }
 }
