Move framework -specific strategies into separate packages

--- a/frameworks/express/package.json
+++ b/frameworks/express/package.json
@@ -28,7 +28,8 @@
   "dependencies": {
     "@knuckleswtf/scribe": "0.0.8",
     "commander": "^5.1.0",
-    "lodash.findlastindex": "^4.6.0"
+    "lodash.findlastindex": "^4.6.0",
+    "lodash.keyby": "^4.6.0"
   },
   "devDependencies": {
     "@types/node": "^14.0.5",
