--- a/frameworks/adonis/package.json
+++ b/frameworks/adonis/package.json
@@ -23,7 +23,8 @@
   },
   "homepage": "https://github.com/knuckleswtf/scribe-js#readme",
   "dependencies": {
-    "@knuckleswtf/scribe": "0.0.8"
+    "@knuckleswtf/scribe": "0.0.8",
+    "lodash.keyby": "^4.6.0"
   },
   "devDependencies": {
     "@adonisjs/ace": "^5.0.8",
