Refactor output; add support for Postman overrides

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "kleur": "^4.0.3",
     "lodash.groupby": "^4.6.0",
     "lodash.keyby": "^4.6.0",
+    "lodash.set": "^4.3.2",
     "lodash.trim": "^4.5.1",
     "lodash.union": "^4.6.0",
     "matcher": "^3.0.0",
