--- a/frameworks/restify/package.json
+++ b/frameworks/restify/package.json
@@ -2,9 +2,9 @@
   "name": "@knuckleswtf/scribe-restify",
   "version": "0.1.0",
   "description": "Generate API documentation for humans from your Restify codebase.",
-  "main": "dist/decorator.js",
+  "main": "src/decorator.js",
   "bin": {
-    "scribe": "dist/cli.js"
+    "scribe": "src/cli.js"
   },
   "scripts": {
     "test": ""
@@ -31,9 +31,7 @@
     "lodash.findlastindex": "^4.6.0"
   },
   "devDependencies": {
-    "@types/node": "^14.0.5",
-    "express": "^4.17.1",
-    "typescript": "^3.9.3"
+    "express": "^4.17.1"
   },
   "engines": {
     "node": ">=12.4.0"
