--- a/frameworks/express/package.json
+++ b/frameworks/express/package.json
@@ -26,7 +26,7 @@
   },
   "homepage": "https://github.com/knuckleswtf/scribe-js#readme",
   "dependencies": {
-    "@knuckleswtf/scribe": "^0.1.2",
+    "@knuckleswtf/scribe": "0.1.2",
     "commander": "^5.1.0",
     "lodash.findlastindex": "^4.6.0",
     "lodash.keyby": "^4.6.0"
