--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   },
   "homepage": "https://github.com/knuckleswtf/scribe-js#readme",
   "dependencies": {
-    "@knuckleswtf/pastel": "^0.2.0",
+    "@knuckleswtf/pastel": "^1.0.0",
     "collect.js": "^4.28.2",
     "cross-spawn": "^7.0.2",
     "docblock-parser": "^1.0.0",
@@ -40,6 +40,7 @@
     "inquirer": "^7.3.3",
     "js-yaml": "^3.14.0",
     "kleur": "^4.0.3",
+    "lodash.get": "^4.4.2",
     "lodash.groupby": "^4.6.0",
     "lodash.keyby": "^4.6.0",
     "lodash.set": "^4.3.2",
