--- a/frameworks/restify/package.json
+++ b/frameworks/restify/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "@knuckleswtf/scribe": "0.2.0",
     "commander": "^5.1.0",
+    "hard-rejection": "^2.1.0",
     "lodash.findlastindex": "^4.6.0"
   },
   "devDependencies": {
