--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
   "devDependencies": {
     "@types/node": "^14.0.5",
     "@types/postman-collection": "^3.5.5",
+    "busboy": "^0.3.1",
     "jest": "^26.1.0",
     "lerna": "^3.22.1",
     "openapi3-ts": "^1.4.0",
