Restify: Make sure src/ files are included

--- a/frameworks/adonis/package.json
+++ b/frameworks/adonis/package.json
@@ -3,6 +3,9 @@
   "version": "0.4.3",
   "description": "Generate API documentation for humans from your Adonis.js codebase.",
   "main": "index.js",
+  "files": [
+    "src/**"
+  ],
   "scripts": {
     "test": ""
   },
