--- a/frameworks/adonis/package.json
+++ b/frameworks/adonis/package.json
@@ -23,7 +23,6 @@
   },
   "homepage": "https://github.com/knuckleswtf/scribe-js#readme",
   "dependencies": {
-    "@knuckleswtf/scribe": "1.0.1",
     "hard-rejection": "^2.1.0",
     "lodash.keyby": "^4.6.0"
   },
@@ -34,5 +33,8 @@
   },
   "engines": {
     "node": ">=12.4.0"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
