--- a/frameworks/adonis/package.json
+++ b/frameworks/adonis/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@knuckleswtf/scribe-adonis",
-  "version": "1.2.0",
+  "version": "1.2.1",
   "description": "Generate API documentation for humans from your Adonis.js codebase.",
   "main": "index.js",
   "scripts": {
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/knuckleswtf/scribe-js#readme",
   "dependencies": {
+    "@knuckleswtf/scribe": "1.2.1",
     "hard-rejection": "^2.1.0",
     "lodash.keyby": "^4.6.0"
   },
