--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@knuckleswtf/scribe",
-  "version": "1.2.1",
+  "version": "1.3.0",
   "description": "Generate API documentation for humans from your Node.js codebase.",
   "main": "dist/index.js",
   "scripts": {
@@ -48,9 +48,12 @@
     "lodash.keyby": "^4.6.0",
     "lodash.set": "^4.3.2",
     "lodash.trim": "^4.5.1",
+    "lodash.trimend": "^4.5.1",
     "lodash.union": "^4.6.0",
     "matcher": "^3.0.0",
     "randexp": "^0.5.3",
+    "require-in-the-middle": "^5.1.0",
+    "shimmer": "^1.2.1",
     "slugify": "^1.4.0",
     "striptags": "^3.1.1",
     "tmp-promise": "^3.0.2",
