--- a/frameworks/restify/package.json
+++ b/frameworks/restify/package.json
@@ -29,13 +29,13 @@
   },
   "homepage": "https://github.com/knuckleswtf/scribe-js#readme",
   "dependencies": {
-    "@knuckleswtf/scribe": "1.3.0",
+    "@knuckleswtf/scribe": "1.4.0",
     "commander": "^5.1.0",
     "hard-rejection": "^2.1.0",
     "lodash.findlastindex": "^4.6.0"
   },
   "devDependencies": {
-    "express": "^4.17.1"
+    "restify": "^8.5.1"
   },
   "engines": {
     "node": ">=12.4.0"
