[Express] Automatically infer server file

--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "lodash.groupby": "^4.6.0",
     "lodash.keyby": "^4.6.0",
     "lodash.set": "^4.3.2",
+    "lodash.sortby": "^4.7.0",
     "lodash.trim": "^4.5.1",
     "lodash.trimend": "^4.5.1",
     "lodash.union": "^4.6.0",
@@ -63,10 +64,12 @@
     "@types/node": "^14.0.5",
     "@types/postman-collection": "^3.5.5",
     "busboy": "^0.3.1",
+    "express": "^4.17.1",
     "jest": "^26.1.0",
     "js-ray": "^0.0.7",
     "lerna": "^3.22.1",
     "openapi3-ts": "^1.4.0",
+    "restify": "^8.5.1",
     "shx": "^0.3.2",
     "typescript": "^4.3"
   },
