--- a/frameworks/adonis/package.json
+++ b/frameworks/adonis/package.json
@@ -28,9 +28,9 @@
     "lodash.keyby": "^4.6.0"
   },
   "devDependencies": {
-    "@adonisjs/ace": "^5.0.8",
-    "@adonisjs/core": "^2.10.4",
-    "@adonisjs/fold": "^4.0.9"
+    "@adonisjs/ace": "^6.0.0",
+    "@adonisjs/core": "2.10.4",
+    "@adonisjs/fold": "^6.0.0"
   },
   "engines": {
     "node": ">=12.4.0"
