--- a/package.json
+++ b/package.json
@@ -32,19 +32,17 @@
   },
   "homepage": "https://github.com/knuckleswtf/scribe-js#readme",
   "dependencies": {
-    "@knuckleswtf/pastel": "^1.1.2",
     "collect.js": "^4.28.2",
     "cross-spawn": "^7.0.2",
     "docblock-parser": "^1.0.0",
     "dotenv": "^8.2.0",
     "faker": "^5.1.0",
     "form-data": "^3.0.0",
-    "handlebars": "^4.7.6",
-    "handlebars-helpers": "^0.10.0",
     "hard-rejection": "^2.1.0",
     "inquirer": "^7.3.3",
     "js-yaml": "^3.14.0",
     "kleur": "^4.0.3",
+    "lodash.findlastindex": "^4.6.0",
     "lodash.get": "^4.4.2",
     "lodash.groupby": "^4.6.0",
     "lodash.keyby": "^4.6.0",
@@ -54,9 +52,11 @@
     "lodash.trimend": "^4.5.1",
     "lodash.union": "^4.6.0",
     "matcher": "^3.0.0",
+    "ncp": "^2.0.0",
     "randexp": "^0.5.3",
     "require-in-the-middle": "^5.1.0",
     "shimmer": "^1.2.1",
+    "showdown": "^1.9.1",
     "slugify": "^1.4.0",
     "striptags": "^3.1.1",
     "tmp-promise": "^3.0.2",
