--- a/package.json
+++ b/package.json
@@ -40,24 +40,18 @@
     "faker": "^5.1.0",
     "form-data": "^3.0.0",
     "hard-rejection": "^2.1.0",
-    "inquirer": "^7.3.3",
     "js-yaml": "^3.14.0",
     "kleur": "^4.0.3",
     "listr2": "^3.10.0",
-    "lodash.findlastindex": "^4.6.0",
     "lodash.get": "^4.4.2",
     "lodash.groupby": "^4.6.0",
-    "lodash.keyby": "^4.6.0",
     "lodash.set": "^4.3.2",
     "lodash.sortby": "^4.7.0",
-    "lodash.trim": "^4.5.1",
     "lodash.trimend": "^4.5.1",
     "lodash.union": "^4.6.0",
     "matcher": "^3.0.0",
     "ncp": "^2.0.0",
     "randexp": "^0.5.3",
-    "require-in-the-middle": "^5.1.0",
-    "shimmer": "^1.2.1",
     "showdown": "^1.9.1",
     "slugify": "^1.4.0",
     "striptags": "^3.1.1",
@@ -68,6 +62,7 @@
     "@types/node": "^14.0.5",
     "@types/postman-collection": "^3.5.5",
     "busboy": "^0.3.1",
+    "depcheck": "^1.4.2",
     "express": "^4.17.1",
     "jasmine": "^3.7.0",
     "jest": "^26.1.0",
