--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "test:unit": "jest",
-    "test:feature": "jasmine --config=test/feature/jasmine.json",
+    "test:feature": "jasmine --config=test/feature/jasmine.json --reporter=jasmine-console-reporter",
     "test": "npm run test:unit && npm run test:feature",
     "version:all": "lerna version --no-push --force-publish=* --exact",
     "publish:all": "npm run publish:core && npm run publish:adonis && npm run publish:express && npm run publish:restify",
@@ -62,9 +62,11 @@
     "@types/node": "^14.0.5",
     "@types/postman-collection": "^3.5.5",
     "busboy": "^0.3.1",
+    "cheerio": "^1.0.0-rc.10",
     "depcheck": "^1.4.2",
     "express": "^4.17.1",
     "jasmine": "^3.7.0",
+    "jasmine-console-reporter": "^3.1.0",
     "jest": "^26.1.0",
     "js-ray": "^0.0.7",
     "lerna": "^3.22.1",
