--- a/test/fixtures/custom.0.yaml
+++ b/test/fixtures/custom.0.yaml
@@ -30,9 +30,7 @@
     - status: 200
       description: 'When the thing was done smoothly.'
       content:
-         {
-           "hey": "ho ho ho"
-         }
+         hey: "ho ho ho"
   responseFields:
     hey:
       name: hey
