--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -26,4 +26,6 @@ jobs:
         run: npm i
 
       - name: Execute tests
+        env:
+          NODE_OPTIONS: "--max-old-space-size=8192"
         run: npm test
