--- a/package.json
+++ b/package.json
@@ -60,10 +60,11 @@
     "uuid": "^8.3.0"
   },
   "devDependencies": {
-    "@types/node": "^14.0.5",
+    "@types/node": "^16.3.2",
     "@types/postman-collection": "^3.5.5",
     "busboy": "^0.3.1",
     "cheerio": "^1.0.0-rc.10",
+    "decache": "^4.6.0",
     "depcheck": "^1.4.2",
     "express": "^4.17.1",
     "jasmine": "^3.7.0",
@@ -73,7 +74,6 @@
     "lerna": "^3.22.1",
     "openapi3-ts": "^1.4.0",
     "restify": "^8.5.1",
-    "sinon": "^11.1.1",
     "typescript": "^4.3"
   },
   "engines": {
